[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.1"
authors = [
    { name="Vinayaka Krishnamurthy", email="vinayaka113@email.com" }
]
description = "A command-line TODO list application"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "click",
    "python-dotenv",
    "mysql-connector-python",
]

[project.scripts]
todo = "todo_cli.cli:cli"

[project.urls]
"Homepage" = "https://github.com/vinayakatk/todo-cli"
"Bug Tracker" = "https://github.com/vinayakatk/todo-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["todo_cli"]